[tool.poetry]
name = "mincrawler"
version = "0.0.1"
description = "A minimal web crawler."
authors = ["altescy <altescy@fastmail.com>"]
license = "MIT"
repository = "https://github.com/altescy/mincrawler"
readme = "README.md"
keywords = ["crawler", "scraping"]

[tool.poetry.dependencies]
python = "^3.8"
colt = "^0.4.0"
httpx = "^0.13.3"
Authlib = "^0.14.3"
jsonnet = "^0.16.0"
tinydb = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"
pylint = "^2.5.2"

[tool.poetry.scripts]
mincrawler = "mincrawler.run:run"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

