[tool.poetry]
name = "mincrawler"
version = "0.1.0"
description = "A minimal web crawler."
authors = ["altescy <altescy@fastmail.com>"]
license = "MIT"
repository = "https://github.com/altescy/mincrawler"
readme = "README.md"
keywords = ["crawler", "scraping"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
